Update mobile font sizes and CTA links - Adjust Let's see if we and Nu orice business font sizes for mobile - Update all CTA links to Google Calendar booking

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="css/contact.css?v=4">
     <link rel="stylesheet" href="css/sections.css?v=27">
     <link rel="stylesheet" href="css/spline.css?v=5">
-    <link rel="stylesheet" href="css/responsive.css?v=17">
+    <link rel="stylesheet" href="css/responsive.css?v=21">
   </head>
   
   <body>
@@ -110,7 +110,7 @@
       <div class="cta-full">
         <h1 class="cta-full-title">
           Let's see if we
-          <a href="https://wa.me/40771587498" target="_blank" rel="noopener" class="cursor-icon" aria-label="Contactează-ne pe WhatsApp">
+          <a href="https://calendar.app.google/hqtAjUDGLYBM2G8h6" target="_blank" rel="noopener" class="cursor-icon" aria-label="Programează o întâlnire">
             <img src="assets/images/cursor.png" alt="cursor" loading="lazy" decoding="async" />
           </a>
         </h1>
@@ -230,7 +230,7 @@
         <h1>
           Ești pregătit să-ți construiești<br />identitatea digitală?
         </h1>
-        <a class="spline-whatsapp" href="https://wa.me/40771587498" target="_blank" rel="noopener">Aplică acum</a>
+        <a class="spline-whatsapp" href="https://calendar.app.google/hqtAjUDGLYBM2G8h6" target="_blank" rel="noopener">Aplică acum</a>
         <div class="text">
           <div style="flex:1 1 auto;"></div>
           <p>Aplică acum iar în 24h îți spunem dacă facem click.</p>
