Update alt tags and fix Vercel config

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         <h1 class="cta-full-title">
           Let's see if we
           <a href="https://calendar.app.google/hqtAjUDGLYBM2G8h6" target="_blank" rel="noopener" class="cursor-icon" aria-label="Programează o întâlnire">
-            <img src="assets/images/cursor.png" alt="cursor" loading="lazy" decoding="async" />
+            <img src="assets/images/cursor.png" alt="Click pentru a programa o întâlnire - ADS Now Marketing Digital Brașov" loading="lazy" decoding="async" />
           </a>
         </h1>
       </div>
