Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.adsnow.ro/">
     
+    <!-- Google Site Verification -->
+    <meta name="google-site-verification" content="dQhDjUOqa61s1Od2oo1oKN4Vg8n8_OV3XslDbRRYi4Y" />
+    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.adsnow.ro/">
